samples/_failures_safe/1761006087_f80ef8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bfcc1c2.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_2bfcc1c2.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
